--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yoshiko-pg",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gulp-autoprefixer": "0.0.7",
+    "gulp-coffee": "^2.0.1",
+    "gulp-plumber": "^0.6.3",
+    "gulp-ruby-sass": "^0.5.0",
+    "gulp-slim": "0.0.8",
+    "win-spawn": "^2.0.0"
+  }
 }
